--- a/hakrawler/Dockerfile
+++ b/hakrawler/Dockerfile
@@ -32,6 +32,9 @@ LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/hakrawler"
 LABEL org.opencontainers.image.description="hakrawler is a fast golang web crawler for gathering URLs and Javascript file locations"
 
+RUN apk update \
+	&& apk upgrade -a
+
 COPY --from=build /go/src/github.com/hakluke/hakrawler/hakrawler /usr/local/bin/hakrawler
 COPY --from=build /config /config
 
