--- a/netmaker/Dockerfile
+++ b/netmaker/Dockerfile
@@ -32,7 +32,9 @@ LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/netmaker"
 LABEL org.opencontainers.image.description="Netmaker automates fast, secure, and distributed virtual networks using Wireguard"
 
-RUN apk --no-cache add gcompat iptables
+RUN apk update \
+	&& apk upgrade -a \
+	&& apk --no-cache add gcompat iptables
 
 COPY --from=build /etc/ssl/certs /etc/ssl/certs
 
