--- a/onetun/Dockerfile
+++ b/onetun/Dockerfile
@@ -9,6 +9,7 @@ ARG ARCHIVE_URL=https://github.com/aramperes/onetun/archive/
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache ca-certificates curl lld g++ musl-dev \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/onetun.tar.gz \
 	&& tar xzf /tmp/onetun.tar.gz --strip 1 -C /usr/src/github.com/aramperes/onetun \
@@ -30,6 +31,9 @@ LABEL org.opencontainers.image.documentation="https://github.com/jauderho/docker
 LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/onetun"
 LABEL org.opencontainers.image.description="A cross-platform, user-space WireGuard port-forwarder that requires no system network configurations."
+
+RUN apk update \
+	&& apk upgrade -a
 
 COPY --from=build /etc/ssl/certs /etc/ssl/certs
 
