--- a/rclone/Dockerfile
+++ b/rclone/Dockerfile
@@ -10,6 +10,7 @@ ENV CGO_ENABLED 0
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache curl gcc musl-dev \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/rclone.tar.gz \
 	&& tar xzf /tmp/rclone.tar.gz --strip 1 -C /go/src/github.com/rclone/rclone \
@@ -31,10 +32,12 @@ LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/rclone"
 LABEL org.opencontainers.image.description="rclone is a cli app to sync files and dirs between cloud providers"
 
-RUN apk --no-cache add ca-certificates fuse tzdata && \
-	echo "user_allow_other" >> /etc/fuse.conf && \
-	addgroup -g 1009 rclone && \
-	adduser -u 1009 -Ds /bin/sh -G rclone rclone
+RUN apk update \
+	&& apk upgrade -a \
+	&& apk --no-cache add ca-certificates fuse tzdata \
+	&& echo "user_allow_other" >> /etc/fuse.conf \
+	&& addgroup -g 1009 rclone \
+	&& adduser -u 1009 -Ds /bin/sh -G rclone rclone
 
 COPY --from=build /go/src/github.com/rclone/rclone/rclone /usr/local/bin/rclone
 COPY --from=build /config /config
