--- a/sftpd/Dockerfile
+++ b/sftpd/Dockerfile
@@ -5,11 +5,12 @@ FROM alpine:3.17.1@sha256:f271e74b17ced29b915d351685fd4644785c6d1559dd1f2d4189a5
 # - Fix default group (1000 does not exist)
 # - OpenSSH needs /var/run/sshd to run
 # - Remove generic host keys, entrypoint generates unique keys
-RUN apk update && \
-    apk add --no-cache bash shadow openssh openssh-sftp-server && \
-    sed -i 's/GROUP=1000/GROUP=100/' /etc/pam.d/useradd && \
-    mkdir -p /var/run/sshd && \
-    rm -f /etc/ssh/ssh_host_*key*
+RUN apk update \
+    && apk upgrade -a \
+    && apk add --no-cache bash shadow openssh openssh-sftp-server \
+    && sed -i 's/GROUP=1000/GROUP=100/' /etc/pam.d/useradd \
+    && mkdir -p /var/run/sshd \
+    && rm -f /etc/ssh/ssh_host_*key*
 
 COPY files/sshd_config /etc/ssh/sshd_config
 COPY files/create-sftp-user /usr/local/bin/
