--- a/subfinder/Dockerfile
+++ b/subfinder/Dockerfile
@@ -10,6 +10,7 @@ ENV CGO_ENABLED 0
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache curl gcc musl-dev \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/subfinder.tar.gz \
 	&& tar xzf /tmp/subfinder.tar.gz --strip 1 -C /go/src/github.com/projectdiscovery/subfinder \
@@ -32,7 +33,9 @@ LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/subfinder"
 LABEL org.opencontainers.image.description="subfinder is a subdomain discovery tool via passive online sources"
 
-RUN apk add --no-cache bind-tools ca-certificates
+RUN apk update \
+	&& apk upgrade -a \
+	&& apk add --no-cache bind-tools ca-certificates
 
 COPY --from=build /go/src/github.com/projectdiscovery/subfinder/v2/subfinder /usr/local/bin/subfinder
 COPY --from=build /config /config
