--- a/textql/Dockerfile
+++ b/textql/Dockerfile
@@ -10,6 +10,7 @@ ENV CGO_ENABLED 1
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache git gcc musl-dev sqlite-dev \ 
 	&& git clone --depth 1 ${GIT_URL} /go/src/github.com/dinedal/textql \
 	&& cd /go/src/github.com/dinedal/textql \
@@ -31,7 +32,9 @@ LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/textql"
 LABEL org.opencontainers.image.description="textql allows you to easily execute SQL against structured text like CSV or TSV"
 
-RUN apk add --no-cache sqlite
+RUN apk update \
+	&& apk upgrade -a \
+	&& apk add --no-cache sqlite
 
 COPY --from=build /go/src/github.com/dinedal/textql/textql-cli /usr/local/bin/textql
 COPY --from=build /config /config
