--- a/tftpd/Dockerfile
+++ b/tftpd/Dockerfile
@@ -9,7 +9,9 @@ ARG BUILD_VERSION
 # Package will be downloaded manually since armhf has no package for syslinux (#1).
 ARG SYSLINUX_PACKAGE="https://dl-cdn.alpinelinux.org/alpine/v3.16/main/x86_64/syslinux-6.04_pre1-r10.apk"
 
-RUN apk add --no-cache tftp-hpa
+RUN apk update \
+	&& apk upgrade -a \
+    && apk add --no-cache tftp-hpa
 
 # Help setting up the basic pxelinux environment.
 RUN mkdir /tmp/syslinux && \
