--- a/testssl.sh/Dockerfile.git
+++ b/testssl.sh/Dockerfile.git
@@ -10,6 +10,7 @@ ARG GIT_URL=https://github.com/drwetter/testssl.sh.git
 
 RUN test -n "${BUILD_VERSION}" \
     && apk update \
+    && apk upgrade -a \
     && apk add --no-cache bash procps drill git coreutils libidn curl socat openssl xxd \
     && git clone --depth 1 ${GIT_URL} --branch ${BUILD_VERSION} /home/testssl \
     && addgroup testssl \
