--- a/unbound/Dockerfile
+++ b/unbound/Dockerfile
@@ -3,7 +3,9 @@ FROM alpine:3.17.1@sha256:f271e74b17ced29b915d351685fd4644785c6d1559dd1f2d4189a5
 ARG BUILD_VERSION
 
 #RUN apk --no-cache add unbound=${BUILD_VERSION} --repository=http://dl-cdn.alpinelinux.org/alpine/edge/main
-RUN apk --no-cache add unbound
+RUN apk update \
+	&& apk upgrade -a \
+    && apk --no-cache add unbound
 
 LABEL org.opencontainers.image.authors="Jauder Ho <jauderho@users.noreply.github.com>"
 LABEL org.opencontainers.image.url="https://github.com/jauderho/dockerfiles"
