--- a/yt-dlp/Dockerfile
+++ b/yt-dlp/Dockerfile
@@ -7,7 +7,8 @@ ARG BUILD_VERSION
 #ARG ARCHIVE_URL=https://github.com/yt-dlp/yt-dlp/archive/
 
 RUN set -x \
- && apk update  \
+ && apk update \
+ && apk upgrade -a \
  && apk add --no-cache \
         ca-certificates \
         curl \
