--- a/zola/Dockerfile
+++ b/zola/Dockerfile
@@ -10,6 +10,7 @@ ARG ARCHIVE_URL=https://github.com/getzola/zola/archive/
 
 RUN test -n "${BUILD_VERSION}" \
 	&& apk update \
+	&& apk upgrade -a \
 	&& apk add --no-cache ca-certificates curl openssl-dev g++ musl-dev make mold cargo \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/zola.tar.gz \
 	&& tar xzf /tmp/zola.tar.gz --strip 1 -C /usr/src/github.com/getzola/zola \
