--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -49,6 +49,12 @@ updates:
 
   # Maintain dependencies for Docker
   - package-ecosystem: "docker"
+    directory: /aznamingtool
+    schedule:
+      interval: "daily"
+
+  # Maintain dependencies for Docker
+  - package-ecosystem: "docker"
     directory: /bl3auto
     schedule:
       interval: "daily"
