--- a/.github/workflows/aznamingtool.yml
+++ b/.github/workflows/aznamingtool.yml
@@ -103,8 +103,8 @@ jobs:
           context: ${{ github.workflow }}
           #platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6,linux/ppc64le
           #platforms: linux/amd64,linux/arm64,linux/arm/v7
-          platforms: linux/amd64,linux/arm64
-          #platforms: linux/amd64
+          #platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           #platforms: ${{ matrix.arch }}
           build-args: |
             BUILD_VERSION
