Switch AzNamingTool to use Alpine instead
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/aznamingtool/Dockerfile.debian
+++ b/aznamingtool/Dockerfile.debian
@@ -2,17 +2,15 @@
 
 ### BASE ###
 #FROM mcr.microsoft.com/dotnet/aspnet:6.0@sha256:03555d92065f11067c9e2f259787fa858a03313540a01f10cde6bfd720671285 AS base
-#FROM mcr.microsoft.com/dotnet/aspnet:7.0@sha256:debec27f5579ddee99c2fd5616ee18def873aa83ad68e7b563c222162099fda5 AS base
-FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine@sha256:22b46c580bd381fca7d35caf9778b0dae8af2aae2e057d2f3280f8953d48beee AS base
+FROM mcr.microsoft.com/dotnet/aspnet:7.0@sha256:debec27f5579ddee99c2fd5616ee18def873aa83ad68e7b563c222162099fda5 AS base
 WORKDIR /app
-RUN apk update && apk upgrade -a
+RUN apt-get update && apt-get -y dist-upgrade --no-install-recommends
 EXPOSE 80
 EXPOSE 443
 
 ### BUILD ###
 #FROM mcr.microsoft.com/dotnet/sdk:6.0@sha256:408f1593d25f04e5d1c97115da40760ca032505c97dafd7d5a291e0a3ae88c61 AS build
-#FROM mcr.microsoft.com/dotnet/sdk:7.0@sha256:028d360c0f409f13daf8689edfe680dba9d4b651eb8a6f1210a3542f0ad4bf58 AS build
-FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine@sha256:98947bb48f054aa2d591b1b839174124fb5181b8c46d4e4bd883bf6355440922 AS build
+FROM mcr.microsoft.com/dotnet/sdk:7.0@sha256:028d360c0f409f13daf8689edfe680dba9d4b651eb8a6f1210a3542f0ad4bf58 AS build
 WORKDIR /src
 
 ARG BUILD_VERSION
@@ -20,16 +18,18 @@ ARG ARCHIVE_URL=https://github.com/microsoft/CloudAdoptionFramework/archive/
 ARG GIT_URL=https://github.com/jauderho/CloudAdoptionFramework.git
 
 RUN test -n "${BUILD_VERSION}" \
-	&& apk update \
-	&& apk upgrade -a \
-	&& apk add --no-cache bash git \
+	&& apt-get update \
+	&& apt-get -y dist-upgrade --no-install-recommends \
+	&& DEBIAN_FRONTEND=${DEBIAN_FRONTEND} apt-get install -y --no-install-recommends git \
 	&& git clone --depth 1 ${GIT_URL} /src \
 	&& cd /src/ready/AzNamingTool \
-	&& dotnet restore "AzureNamingTool.csproj" -r linux-musl-x64 /p:PublishReadyToRun=true \
-	&& dotnet build "AzureNamingTool.csproj" -r linux-musl-x64 -c Release -o /app/build --self-contained true --no-restore /p:PublishTrimmed=true /p:PublishReadyToRun=true /p:PublishSingleFile=true \
-	&& dotnet publish "AzureNamingTool.csproj" -r linux-musl-x64 -c Release -o /app/publish --self-contained true --no-restore /p:PublishTrimmed=true /p:PublishReadyToRun=true /p:PublishSingleFile=true \
-	&& apk del bash git \
-	&& rm -rf /var/cache/apk/*
+	&& dotnet restore "AzureNamingTool.csproj" \
+	&& dotnet build "AzureNamingTool.csproj" -c Release -o /app/build \
+	&& dotnet publish "AzureNamingTool.csproj" -c Release -o /app/publish \
+	&& apt-get purge -y git \
+	&& apt-get autoremove -y --purge \
+	&& rm -rf /var/lib/apt/lists/* \
+	&& apt-get clean
 
 ### FINAL ###
 FROM base AS final
@@ -42,7 +42,7 @@ LABEL org.opencontainers.image.source="https://github.com/jauderho/dockerfiles"
 LABEL org.opencontainers.image.title="jauderho/aznamingtool"
 LABEL org.opencontainers.image.description="AzNamingTool assists with the configuration and generation of Azure Resource names"
 
-RUN apk update && apk upgrade -a
+RUN apt-get update && apt-get -y dist-upgrade --no-install-recommends
 
 COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "AzureNamingTool.dll"]
