--- a/aznamingtool/Dockerfile.alpine
+++ b/aznamingtool/Dockerfile.alpine
@@ -25,9 +25,9 @@ RUN test -n "${BUILD_VERSION}" \
 	&& apk add --no-cache bash git \
 	&& git clone --depth 1 ${GIT_URL} /src \
 	&& cd /src/ready/AzNamingTool \
-	&& dotnet restore "AzureNamingTool.csproj" -r linux-musl-x64 /p:PublishReadyToRun=true \
-	&& dotnet build "AzureNamingTool.csproj" -r linux-musl-x64 -c Release -o /app/build --self-contained true --no-restore /p:PublishTrimmed=true /p:PublishReadyToRun=true /p:PublishSingleFile=true \
-	&& dotnet publish "AzureNamingTool.csproj" -r linux-musl-x64 -c Release -o /app/publish --self-contained true --no-restore /p:PublishTrimmed=true /p:PublishReadyToRun=true /p:PublishSingleFile=true \
+	&& dotnet restore "AzureNamingTool.csproj" -r linux-musl-x64 \
+	&& dotnet build "AzureNamingTool.csproj" -r linux-musl-x64 -c Release -o /app/build \
+	&& dotnet publish "AzureNamingTool.csproj" -r linux-musl-x64 -c Release -o /app/publish \
 	&& apk del bash git \
 	&& rm -rf /var/cache/apk/*
 
