--- a/catprinter/Pipfile
+++ b/catprinter/Pipfile
@@ -3,6 +3,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://www.piwheels.org/simple"
+verify_ssl = true
+name = "piwheels"
+
 [packages]
 catprinter = { git = "https://github.com/jauderho/catprinter.git", editable = true }
 bleak = "*"
