--- a/dkimpy/Pipfile
+++ b/dkimpy/Pipfile
@@ -3,6 +3,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://www.piwheels.org/simple"
+verify_ssl = true
+name = "piwheels"
+
 [packages]
 #dkimpy = "*"
 dkimpy = {extras = ["ed25519", "ARC", "asyncio"], version = "*"}
