--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,4 +1,5 @@
 -i https://pypi.org/simple
+--extra-index-url https://www.piwheels.org/simple
 ansible==7.1.0
 ansible-compat==2.2.7 ; python_version >= '3.8'
 ansible-core==2.14.2 ; python_version >= '3.9'
