--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,12 +1,12 @@
 -i https://pypi.org/simple
 --extra-index-url https://www.piwheels.org/simple
 ansible==7.2.0
-ansible-compat==3.0.0 ; python_version >= '3.8'
+ansible-compat==3.0.1 ; python_version >= '3.8'
 ansible-core==2.14.2 ; python_version >= '3.9'
 ansible-lint==6.11.0
 attrs==22.2.0 ; python_version >= '3.6'
 bitmath==1.3.3.1
-black==22.12.0 ; python_version >= '3.7'
+black==23.1.0 ; python_version >= '3.7'
 bracex==2.3.post1 ; python_version >= '3.7'
 cachez==0.1.2
 certifi==2022.12.7 ; python_version >= '3.6'
@@ -41,11 +41,11 @@ retryz==0.1.9
 rich==13.3.1 ; python_full_version >= '3.7.0'
 ruamel.yaml==0.17.21 ; python_version >= '3'
 ruamel.yaml.clib==0.2.7 ; python_version < '3.11' and platform_python_implementation == 'CPython'
-setuptools==67.0.0 ; python_version >= '3.7'
+setuptools==67.1.0 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 storops==1.2.11
 subprocess-tee==0.4.1 ; python_version >= '3.8'
-tomli==2.0.1 ; python_full_version < '3.11.0a7'
+tomli==2.0.1 ; python_version < '3.11'
 urllib3==1.26.14 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 wcmatch==8.4.1 ; python_version >= '3.7'
 wheel==0.38.4
