--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -22,7 +22,7 @@ markdown-it-py==2.1.0 ; python_version >= '3.7'
 markupsafe==2.1.2 ; python_version >= '3.7'
 mdurl==0.1.2 ; python_version >= '3.7'
 -e git+https://github.com/mitogen-hq/mitogen.git@660d3e088501816edc12f4b98e9e92a35f68c707#egg=mitogen
-mypy-extensions==0.4.3
+mypy-extensions==1.0.0 ; python_version >= '3.5'
 ntlm-auth==1.5.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 packaging==23.0 ; python_version >= '3.7'
 pathspec==0.11.0 ; python_version >= '3.7'
