--- a/black/Dockerfile
+++ b/black/Dockerfile
@@ -18,7 +18,7 @@ RUN test -n "${BUILD_VERSION}" && \
 	apk --no-cache add --virtual build-dependencies ${build_pkgs} && \
 	apk --no-cache add ${runtime_pkgs} && \
 	python3 -m pip install --no-cache-dir --upgrade pip && \
-	python3 -m pip install --no-cache-dir --upgrade packaging && \
+	python3 -m pip install --no-cache-dir --upgrade --ignore-installed packaging && \
 	pip3 install --no-cache-dir --upgrade black==${BUILD_VERSION} && \
 	#apk del build-dependencies && \
 	rm -rf /var/cache/apk/* && \
