--- a/ansible/Dockerfile.alpine
+++ b/ansible/Dockerfile.alpine
@@ -20,6 +20,7 @@ RUN test -n "${BUILD_VERSION}" && \
   apk --no-cache add --virtual build-dependencies ${build_pkgs} && \
   apk --no-cache add ${runtime_pkgs} && \
   python3 -m pip install --no-cache-dir --upgrade pip && \
+  python3 -m pip install --no-cache-dir --upgrade --ignore-installed packaging && \
   pip3 install --no-cache-dir --upgrade wheel && \
   pip3 install --no-cache-dir --upgrade cryptography cffi certifi && \
   pip3 install --no-cache-dir ansible==${BUILD_VERSION} && \
