--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -22,7 +22,6 @@ markupsafe==2.1.2 ; python_version >= '3.7'
 mdurl==0.1.2 ; python_version >= '3.7'
 -e git+https://github.com/mitogen-hq/mitogen.git@660d3e088501816edc12f4b98e9e92a35f68c707#egg=mitogen
 mypy-extensions==1.0.0 ; python_version >= '3.5'
-ntlm-auth==1.5.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 packaging==23.0 ; python_version >= '3.7'
 pathspec==0.11.0 ; python_version >= '3.7'
 persist-queue==0.8.0
@@ -30,11 +29,12 @@ platformdirs==3.0.0 ; python_version >= '3.7'
 pycparser==2.21
 pygments==2.14.0 ; python_version >= '3.6'
 pyrsistent==0.19.3 ; python_version >= '3.7'
+pyspnego==0.7.0 ; python_version >= '3.7'
 python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pywinrm==0.4.3
 pyyaml==6.0 ; python_version >= '3.6'
 requests==2.28.2 ; python_version >= '3.7' and python_version < '4'
-requests-ntlm==1.1.0
+requests-ntlm==1.2.0 ; python_version >= '3.7'
 resolvelib==0.8.1
 retryz==0.1.9
 rich==13.3.1 ; python_full_version >= '3.7.0'
