--- a/.github/workflows/imapsync.yml
+++ b/.github/workflows/imapsync.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@c8454efe5d0bdefd25384362fe217428ca277d57 # v1
         with:
-          egress-policy: block
-          disable-telemetry: true
+          egress-policy: audit
+          disable-telemetry: false
           allowed-endpoints: >
             95s5acprodeus1file6.blob.core.windows.net:443
             actiontoad.canonical.com:443
