--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -39,7 +39,10 @@ jobs:
           allowed-endpoints: 
             api.github.com:443
             archive.ubuntu.com:80
+            artifactcache.actions.githubusercontent.com:443
             auth.docker.io:443
+            crates.io:443
+            dl-cdn.alpinelinux.org:443
             files.pythonhosted.org:443
             ghcr.io:443
             github.com:443
@@ -49,6 +52,7 @@ jobs:
             pypi.org:443
             registry-1.docker.io:443
             security.ubuntu.com:80
+            static.crates.io:443
             www.piwheels.org:443
 
       - name: Source checkout
