--- a/.github/workflows/pwru.yml
+++ b/.github/workflows/pwru.yml
@@ -34,23 +34,19 @@ jobs:
         uses: step-security/harden-runner@c8454efe5d0bdefd25384362fe217428ca277d57 # v1
         with:
           disable-sudo: true
-          egress-policy: audit
-          disable-telemetry: false
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: 
-            95s5acprodeus1file6.blob.core.windows.net:443
             api.github.com:443
-            archive.ubuntu.com:443
-            artifactcache.actions.githubusercontent.com:443
+            archive.ubuntu.com:80
             auth.docker.io:443
-            codeload.github.com:443
-            dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
-            ports.ubuntu.com:443
+            index.docker.io:443
+            ports.ubuntu.com:80
             production.cloudflare.docker.com:443
-            proxy.golang.org:443
             registry-1.docker.io:443
-            security.ubuntu.com:443
+            security.ubuntu.com:80
           
       - name: Source checkout
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v2.4.0 
