--- a/.github/workflows/stor2rrd.yml
+++ b/.github/workflows/stor2rrd.yml
@@ -29,23 +29,21 @@ jobs:
         uses: step-security/harden-runner@c8454efe5d0bdefd25384362fe217428ca277d57 # v1
         with:
           disable-sudo: true
-          egress-policy: audit
-          disable-telemetry: false
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: 
-            95s5acprodeus1file6.blob.core.windows.net:443
             api.github.com:443
-            artifactcache.actions.githubusercontent.com:443
             auth.docker.io:443
-            codeload.github.com:443
-            cpanmetadb.plackperl.org:443
+            cpanmetadb.plackperl.org:80
             dl-cdn.alpinelinux.org:443
+            dl-cdn.alpinelinux.org:80
             ghcr.io:443
             github.com:443
+            index.docker.io:443
             production.cloudflare.docker.com:443
-            proxy.golang.org:443
             registry-1.docker.io:443
             stor2rrd.com:443
-            www.cpan.org:443
+            www.cpan.org:80
           
       - name: Source checkout
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v2.4.0 
