--- a/.github/workflows/youtube-dl.yml
+++ b/.github/workflows/youtube-dl.yml
@@ -29,21 +29,18 @@ jobs:
         uses: step-security/harden-runner@c8454efe5d0bdefd25384362fe217428ca277d57 # v1
         with:
           disable-sudo: true
-          egress-policy: audit
-          disable-telemetry: false
+          egress-policy: block
+          disable-telemetry: true
           allowed-endpoints: 
-            95s5acprodeus1file6.blob.core.windows.net:443
             api.github.com:443
-            artifactcache.actions.githubusercontent.com:443
             auth.docker.io:443
-            codeload.github.com:443
             dl-cdn.alpinelinux.org:443
             ghcr.io:443
             github.com:443
-            keyserver.ubuntu.com:443
+            index.docker.io:443
+            keyserver.ubuntu.com:11371
             objects.githubusercontent.com:443
             production.cloudflare.docker.com:443
-            proxy.golang.org:443
             registry-1.docker.io:443
             yt-dl.org:443
           
