--- a/excalidraw/Dockerfile
+++ b/excalidraw/Dockerfile
@@ -18,11 +18,10 @@ RUN test -n "${BUILD_VERSION}" \
 	&& git clone --depth 1 ${GIT_URL} . \
 	&& yarn set version berry \
 	&& yarn install \
+	&& yarn up \
 	&& yarn up -R eslint postcss react-scripts \
-	&& npx browserslist@latest --update-db
-
-COPY . .
-RUN yarn build:app:docker
+	&& npx browserslist@latest --update-db \
+	&& yarn build:app:docker
 
 
 
