Revert cf-warp for testing
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/cf-warp/Dockerfile
+++ b/cf-warp/Dockerfile
@@ -13,9 +13,12 @@ RUN test -n "${BUILD_VERSION}" \
 	&& update-ca-certificates \
 	&& curl -L "${ARCHIVE_URL}${BUILD_VERSION}.tar.gz" -o /tmp/cf-warp.tar.gz \
 	&& tar xzf /tmp/cf-warp.tar.gz --strip 1 -C /app \
-	&& yarn set version berry \
+	#&& yarn set version berry \
 	&& yarn install \
-	&& yarn up
+	&& yarn upgrade --latest \
+	&& yarn --ignore-optional \
+	#&& yarn up
+	&& yarn outdated
 
 
 
