--- a/cloudflared/Dockerfile
+++ b/cloudflared/Dockerfile
@@ -1,5 +1,5 @@
-#FROM golang:1.20.1-alpine3.17@sha256:87d0a3309b34e2ca732efd69fb899d3c420d3382370fd6e7e6d2cb5c930f27f9 AS build
-FROM golang:1.19.6-alpine3.17 AS build
+FROM golang:1.20.1-alpine3.17@sha256:87d0a3309b34e2ca732efd69fb899d3c420d3382370fd6e7e6d2cb5c930f27f9 AS build
+#FROM golang:1.19.6-alpine3.17 AS build
 
 WORKDIR /go/src/github.com/cloudflare/cloudflared/
 
