--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -17,8 +17,8 @@ RUN apt-get update && \
 	build_pkgs="cargo gcc libssl-dev python3-dev git" && \
 	runtime_pkgs="python3-pip openssh-client" && \
 	DEBIAN_FRONTEND=${DEBIAN_FRONTEND} apt-get install -y --no-install-recommends ${build_pkgs} ${runtime_pkgs} && \
-	python3 -m pip install --no-cache-dir --upgrade pip && \
-	python3 -m pip install --no-cache-dir --upgrade --ignore-installed packaging && \
+	python3 -m pip install --no-cache-dir --upgrade pip --break-system-packages && \
+	python3 -m pip install --no-cache-dir --upgrade --ignore-installed packaging --break-system-packages&& \
 	pip3 install --no-cache-dir -r requirements.txt && \
 	apt-get purge -y ${build_pkgs} && \
 	apt-get autoremove -y --purge && \
