--- a/.github/workflows/update-python.yml
+++ b/.github/workflows/update-python.yml
@@ -19,7 +19,7 @@ on:
       - .github/workflows/update-python.yml
   workflow_dispatch:
   schedule:
-    - cron: "0 8 * * 1"
+    - cron: "30 3 * * *"
 
 env:
   DOCKER_CLI_EXPERIMENTAL: enabled
