--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -58,6 +58,7 @@ jobs:
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
     needs: trivy
     strategy:
+      max-parallel: 20
       fail-fast: false
       matrix:
         #image: [cloudflared]
