--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -22,6 +22,7 @@ jobs:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
     strategy:
+      max-parallel: 20
       fail-fast: false
       matrix:
         #image: [cloudflared]
@@ -56,8 +57,9 @@ jobs:
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results  
-    needs: snyk
+    #needs: trivy
     strategy:
+      max-parallel: 20
       fail-fast: false
       matrix:
         #image: [cloudflared]
@@ -91,7 +93,7 @@ jobs:
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-    needs: trivy
+    #needs: anchore
     strategy:
       max-parallel: 20
       fail-fast: false
