Temp workaround for Python installs using --break-system-packages
Signed-off-by: Jauder Ho <jauderho@users.noreply.github.com>

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -19,7 +19,7 @@ RUN apt-get update && \
 	DEBIAN_FRONTEND=${DEBIAN_FRONTEND} apt-get install -y --no-install-recommends ${build_pkgs} ${runtime_pkgs} && \
 	python3 -m pip install --no-cache-dir --upgrade pip --break-system-packages && \
 	#python3 -m pip install --no-cache-dir --upgrade --ignore-installed packaging --break-system-packages && \
-	pip3 install --no-cache-dir -r requirements.txt && \
+	pip3 install --no-cache-dir -r requirements.txt --break-system-packages && \
 	apt-get purge -y ${build_pkgs} && \
 	apt-get autoremove -y --purge && \
 	rm -rf /var/lib/apt/lists/* && \
