--- a/sslyze/Dockerfile
+++ b/sslyze/Dockerfile
@@ -15,8 +15,8 @@ COPY requirements.txt .
 RUN apt-get update && \
 	apt-get dist-upgrade -y && \
 	DEBIAN_FRONTEND=${DEBIAN_FRONTEND} apt-get install -y --no-install-recommends python3-pip && \
-	python3 -m pip install --no-cache-dir --upgrade pip && \
-	pip3 install --no-cache-dir -r requirements.txt && \
+	python3 -m pip install --no-cache-dir --upgrade pip --break-system-packages && \
+	pip3 install --no-cache-dir -r requirements.txt --break-system-packages && \
 	apt-get autoremove -y --purge && \
 	rm -rf /var/lib/apt/lists/* && \
 	apt-get clean
